crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_robust_stmts__test__alembic_drop_table_in_separate_transaction_err.snap
---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: lint_errors(sql)
---
warning[prefer-robust-stmts]: Missing `IF EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ 
3 │ DROP TABLE old_table;
  │ ━━━━━━━━━━━━━━━━━━━━━
  ╭╴
3 │ DROP TABLE if exists old_table;
  ╰╴           +++++++++
