crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_robust_stmts__test__alter_table_drop_constraint_err.snap
---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: "lint_formatted(r#\"\nselect 1; -- so we don't skip checking\nALTER TABLE \"core_foo\" DROP CONSTRAINT \"core_foo_idx\";\n        \"#)"
---
error[PreferRobustStmts]: Missing `IF EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ 
3 │ ALTER TABLE "core_foo" DROP CONSTRAINT "core_foo_idx";
  │                        ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  ╭╴
3 │ ALTER TABLE "core_foo" DROP CONSTRAINT if exists "core_foo_idx";
  ╰╴                                       +++++++++
