crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_robust_stmts__test__create_index_concurrently_muli_stmts_err.snap
---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: errors
---
[
    Violation {
        code: PreferRobustStmts,
        message: "Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.",
        text_range: 1..57,
        messages: [
            "Use an explicit name for a concurrently created index",
        ],
    },
    Violation {
        code: PreferRobustStmts,
        message: "Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.",
        text_range: 59..115,
        messages: [
            "Use an explicit name for a concurrently created index",
        ],
    },
]
