crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_robust_stmts__test__create_index_concurrently_unnamed_err.snap
---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: errors
---
[
    Violation {
        code: PreferRobustStmts,
        message: "Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.",
        text_range: 40..96,
        messages: [
            "Use an explicit name for a concurrently created index",
        ],
    },
]
