crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_robust_stmts__test__create_table_with_on_commit_drop_err.snap
---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: "lint_errors(r#\"\nselect 1; -- so we don't skip checking\nCREATE TABLE test_table (id int) ON COMMIT DROP;\n        \"#)"
---
warning[prefer-robust-stmts]: Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ 
3 │ CREATE TABLE test_table (id int) ON COMMIT DROP;
  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  ╭╴
3 │ CREATE TABLE if not exists test_table (id int) ON COMMIT DROP;
  ╰╴             +++++++++++++
