crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_robust_stmts__test__create_temp_table_without_on_commit_drop_err.snap
---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: "lint_errors(r#\"\nselect 1; -- so we don't skip checking\nCREATE TEMP TABLE test_table (id int);\n        \"#)"
---
warning[prefer-robust-stmts]: Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ 
3 │ CREATE TEMP TABLE test_table (id int);
  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  ╭╴
3 │ CREATE TEMP TABLE if not exists test_table (id int);
  ╰╴                  +++++++++++++
